# TeamChess

./: .gitignore  AI.py  AIpy.py  Engine.py  Main.py  README.md  SETTINGS.json  UI.py  Utils.py  lang_en.py  lang_ru.py  log.txt  pyproject.toml
AI/: AI.py  AIHandler.py  AIpy.py  OldAI.py
Engine/: Engine.py  Move.py
Generators/: GSHasher.py  MoveGen.py  PossiblePromotions.py  ThreatTables.py
Localization/: lang_en.py  lang_ru.py
Networking/: NetHelpers.py  Network.py  Server.py
OldScoreBoard/: module.cpp  setup.py
ScoreBoard/: module.cpp  setup.py
ScoreBoard/ScoreBoard.egg-info/: PKG-INFO  SOURCES.txt
TestDLL/: module.cpp  setup.py
TestDLL/TestDLL.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
UI/: Highlighter.py  UIObjects.py  WindowSizeConsts.py
UI/Menus/: ConnectMenu.py  DialogWindow.py  GamePlayMenu.py  MainMenu.py  Menu.py  NewGameMenu.py  SettingsMenu.py  WaitingMenu.py
Utils/: Asserter.py  FENConverter.py  Logger.py  MagicConsts.py  PositionRecorder.py  ResourceManager.py  ScoreBoardLearning.py  UI.py  Utils.py
