[tool.poetry]
name = "teamchess"
version = "0.1.0"
description = ""
authors = ["Nitroxt5 <filippov.maxim52@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pygame = "^2.1.2"
testdll = {path = "TestDLL"}
scoreboard = {path = "ScoreBoard"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
